Made lots and lots of changes everywhere, sorry for the crappy description

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,7 @@
 <div class="label">
     <h3 class= "container">Listing companies</h1>
 </div>
+<h4>To Do: Determine View - not this table</h4>
 
 <table class= "sortable">
   <tr>
