--- a/app/views/fundings/index.html.erb
+++ b/app/views/fundings/index.html.erb
@@ -1,61 +1,59 @@
 <div class="label">
-    <h3 class= "container">The Funding Landscape</h1>
+    <h3 class= "container">The Startup Funding Landscape</h1>
 </div>
 
-<div class="grid_12">
-   <h2>Total Funding</h2>
+<div class="container grid_12">
+  <h2>Top 10, 25, etc. Investors</h2>
+  <h2>Fundings by Location</h2>
+  <h2>Recent Fundings by...Location, Round</h2>
+  <h2>Top 10 Fundings by Date</h2>
+  <h2>Top 10 Fundings by Round Date</h2>
+
+   <h2>LTM Funding</h2>
    <p>To do: click on table row and take you to details for that table row </p>
-   <p>To do: format everything as $ millions</p>
-   <table class="table table-hover">
+   <p>To do: how do we create footnotes (i.e. LTM is last tweleve months) </p>
+   <table class="table table-hover sortable">
      <tr>
-       <th>Timeframe</th>
+       <th>Quarter</th>
        <th>Amount ($ millions)</th>
        <th>Volume</th>
        <th>Avg. Round Investment</th>
      </tr>
      <tr>
-     <tr>
-       <td>LTM</td>
-       <td> <%= Funding.ltm_fundings(365).sum('funding_amount') %></td>
-       <td> <%= Funding.ltm_fundings(365).count %></td>
-       <td> <%= Funding.ltm_fundings(365).average('funding_amount') %></td>
-     </tr>
        <td>Q2 2013</td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year, 'q2').sum('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').sum('funding_amount')) %></td>
        <td> <%= Funding.quarterly_fundings(Time.now().year, 'q2').count %></td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year, 'q2').average('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q2').average('funding_amount')) %></td>
      </tr>
     </tr>
        <td>Q1 2013</td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year, 'q1').sum('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').sum('funding_amount')) %></td>
        <td> <%= Funding.quarterly_fundings(Time.now().year, 'q1').count %></td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year, 'q1').average('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year, 'q1').average('funding_amount')) %></td>
      </tr>
    </tr>
        <td>Q4 2012</td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q4').sum('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').sum('funding_amount')) %></td>
        <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q4').count %></td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q4').average('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q4').average('funding_amount')) %></td>
      </tr>
    </tr>
        <td>Q3 2012</td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').sum('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').sum('funding_amount')) %></td>
        <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').count %></td>
-       <td> <%= Funding.quarterly_fundings(Time.now().year - 1, 'q3').average('funding_amount') %></td>
+       <td> <%= format_mil(Funding.quarterly_fundings(Time.now().year - 1, 'q3').average('funding_amount')) %></td>
      </tr>
 
    </table>
 </div>
 
-<div class="grid_12">
-
-
-
+<div class="container grid_12">
+  <h2>LTM Funding by Industry</h2>
+  <h4>To Do: Need to recolor these</h4>
+  <%= render "funding_donut" %>
 </div>
 
-
-
-<div class="grid_12">
+<div class="container grid_12">
   <h2>LTM Funding by Round</h2>
   <table class="table table-hover sortable">
     <tr>
@@ -66,64 +64,59 @@
     </tr>
     <tr>
       <td>Seed</td>
-      <td> <%=  Funding.for_funding_round('seed').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('seed').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('seed').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('seed').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('seed').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Angel</td>
-      <td> <%=  Funding.for_funding_round('angel').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('angel').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('angel').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('angel').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('angel').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series A</td>
-      <td> <%=  Funding.for_funding_round('a').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('a').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('a').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('a').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('a').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series B</td>
-      <td> <%=  Funding.for_funding_round('b').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('b').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('b').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('b').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('b').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series C</td>
-      <td> <%=  Funding.for_funding_round('c').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('c').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('c').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('c').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('c').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series D</td>
-      <td> <%=  Funding.for_funding_round('d').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('d').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('d').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('d').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('d').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series E</td>
-      <td> <%=  Funding.for_funding_round('e').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('e').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('e').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('e').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('e').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series F</td>
-      <td> <%=  Funding.for_funding_round('f').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('f').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('f').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('f').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('f').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
     <tr>
       <td>Series G</td>
-      <td> <%=  Funding.for_funding_round('g').ltm_fundings(365).sum('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('g').ltm_fundings(365).sum('funding_amount') ) %></td>
       <td> <%=  Funding.for_funding_round('g').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('g').ltm_fundings(365).average('funding_amount') %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('g').ltm_fundings(365).average('funding_amount') ) %></td>
     </tr>
-    <tr>
-      <td>IPOs</td>
-      <td> <%=  Funding.for_funding_round('ipo').ltm_fundings(365).sum('funding_amount') %></td>
-      <td> <%=  Funding.for_funding_round('ipo').ltm_fundings(365).count %></td>
-      <td> <%=  Funding.for_funding_round('ipo').ltm_fundings(365).average('funding_amount') %></td>
-    </tr>
+
 
 
   </table>
@@ -131,309 +124,16 @@
 </div>
 
 
+<div class="container grid_12">
+  <h2>LTM Total Funding...Why Is this So Squished unless I make this title big</h2>
+  <p>To Do: Format $ in millions</p>
+  <p>To Do: Format dates in 'Jun 2013' or Jun '13</p>
+  <p>To Do: Need to recolor this to green</p>
+  <%= render "funding_bar" %>
+</div>
 
-
-
-
-<h2>Top 10, 25, etc. Investors</h2>
-<br>
-<h2>Fundings by Location</h2>
-<br>
-<h2>Top 10 Fundings by Date</h2>
-<br>
-<h2>Top 10 Fundings by Round Date</h2>
-<br>
-
-
-
-<h2>1Q2012 Fundings</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.quarterly_fundings(2012, 'q1').each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount%></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-<% end %>
-</table>
-
-<h2>2Q2012 Fundings</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.quarterly_fundings(2012, 'q2').each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount%></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-<% end %>
-</table>
-
-<h2>3Q2012 Fundings</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.quarterly_fundings(2012, 'q3').each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount%></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-<% end %>
-</table>
-
-<h2>4Q2012 Fundings</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.quarterly_fundings(2012, 'q4').each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount%></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-<% end %>
-</table>
-
-
-
-<h2>Q1 2013 Fundings</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.quarterly_fundings(2013, 'q1').each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount%></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-<% end %>
-</table>
-
-<br />
-
-<h2>All Fundings in Last 3 Months</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.ltm_fundings(90).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount%></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-<% end %>
-</table>
-
-<br />
-
-<h2>Fundings in Last 6 Months</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.ltm_fundings(90).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<h2>Fundings in Last 9 Months</h2>
-<table class="table table-hover">
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-
-  </tr>
-
-<% Funding.ltm_fundings(90).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-  </tr>
-<% end %>
-</table class="table table-hover">
-
-<br />
-
-<h2>Fundings in Last 12 Months</h2>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.ltm_fundings(90).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-  </tr>
-<% end %>
-
-</table class="table table-hover">
-
-<br />
-
-<h2>Fundings in 2013</h2>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.annual_fundings(2013).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-
-  </tr>
-<% end %>
-</table>
-
-<h2>Fundings in 2012</h2>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.annual_fundings(2012).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-
-  </tr>
-<% end %>
-</table>
-<br />
-
-<h2>Fundings in 2011</h2>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Company perma</th>
-    <th>Funding code</th>
-    <th>Funding amount</th>
-    <th>Funding currency</th>
-    <th>Funding date</th>
-  </tr>
-
-<% Funding.annual_fundings(2011).each do |funding| %>
-  <tr>
-    <td><%= funding.company_id %></td>
-    <td><%= funding.company.perma %></td>
-    <td><%= funding.funding_code %></td>
-    <td><%= funding.funding_amount %></td>
-    <td><%= funding.funding_currency %></td>
-    <td><%= funding.funding_date %></td>
-
-  </tr>
-<% end %>
-</table>
-<br />
+<!-- Need to figure out why grid 24 causes everything to blow up -->
+<div >
 
 
 <h2>All Fundings</h2>
@@ -460,4 +160,6 @@
 </table>
 
 <br />
+
+</div>
 
