--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -18,3 +18,97 @@
 <%= render 'industry_bar' %>
 
 </div>
+
+
+  <h2>LTM Funding by Round - Web (Hardcoded)</h2>
+
+  <%=form_tag('/industry') do %>
+    <div>
+      <%= select_tag :industry_id, options_from_collection_for_select(Industry.all, :id, :name) %>
+    </div>
+
+    <%= submit_tag "Select Industry", class: 'btn btn-success' %>
+  <% end %>
+
+  <table class="table table-hover sortable">
+    <tr>
+      <th>Series</th>
+      <th>Amount ($ millions)</th>
+      <th>Volume</th>
+      <th>Avg. Round Investment</th>
+    </tr>
+    <tr>
+      <td>Seed</td>
+      <td> <%=  format_mil(Funding.for_funding_round('seed').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('seed').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('seed').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Angel</td>
+      <td> <%=  format_mil(Funding.for_funding_round('angel').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('angel').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('angel').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series A</td>
+      <td> <%=  format_mil(Funding.for_funding_round('a').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('a').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('a').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series B</td>
+      <td> <%=  format_mil(Funding.for_funding_round('b').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('b').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('b').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series C</td>
+      <td> <%=  format_mil(Funding.for_funding_round('c').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('c').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('c').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series D</td>
+      <td> <%=  format_mil(Funding.for_funding_round('d').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('d').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('d').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series E</td>
+      <td> <%=  format_mil(Funding.for_funding_round('e').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('e').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('e').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series F</td>
+      <td> <%=  format_mil(Funding.for_funding_round('f').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('f').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('f').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Series G</td>
+      <td> <%=  format_mil(Funding.for_funding_round('g').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('g').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('g').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Venture Round</td>
+      <td> <%=  format_mil(Funding.for_funding_round('venture_round').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('venture_round').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('venture_round').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Private Equity</td>
+      <td> <%=  format_mil(Funding.for_funding_round('private_equity').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('private_equity').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('private_equity').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+    <tr>
+      <td>Debt Round</td>
+      <td> <%=  format_mil(Funding.for_funding_round('debt_round').for_industry(7).ltm_fundings(365).sum('funding_amount') ) %></td>
+      <td> <%=  Funding.for_funding_round('debt_round').for_industry(7).ltm_fundings(365).count %></td>
+      <td> <%=  format_mil(Funding.for_funding_round('debt_round').for_industry(7).ltm_fundings(365).average('funding_amount') ) %></td>
+    </tr>
+
+  </table>
+
