--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,9 +10,9 @@
     <section class="container group">
       <nav class="section_nav">
         <a href=<%=individuals_url%>>
-          <img src="assets/lightning.png">
+          <img src="assets/wing.svg">
           <h3><span class="bling">ANGEL</span></h3>
-          <p>Listings</p>
+          <p>Investing Statistics</p>
         </a>
         <a href=<%=companies_url%>>
           <img src="assets/pie_chart.png">
